5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1846_1280.log
== TEST (2019-06-26 14:05:57) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 0

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		 moeda = moeda + 1
			
	if	(tabuleiro[y,x] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moeda)
print("life: ", life)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:07:11) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 0

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moeda = moeda + 1
			
	if	(tabuleiro[y,x] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moeda)
print("life: ", life)



-- EXECUTION TIME:
1.08679
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1280/main.py", line 46, in <module>
    moeda = moeda + 1
NameError: name 'moeda' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:07:17) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 0

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moeda = moeda + 1
			
	if	(tabuleiro[y,x] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moeda)
print("life: ", life)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:08:22) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 0

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moedaS = moedaS + 1
			
	if	(tabuleiro[y,x] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moeda)
print("life: ", life)



-- EXECUTION TIME:
0.850269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1280/main.py", line 46, in <module>
    moedaS = moedaS + 1
NameError: name 'moedaS' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:08:37) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 0

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moedas = moedas + 1
			
	if	(tabuleiro[y,x] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moeda)
print("life: ", life)



-- EXECUTION TIME:
1.15966
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1280/main.py", line 53, in <module>
    print("moedas: ", moeda)
NameError: name 'moeda' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:09:01) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 0

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moedas = moedas + 1
			
	if	(tabuleiro[y,x] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moeda)
print("life: ", life)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:09:58) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 0

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moedas = moedas + 1
			
	if	(tabuleiro[y,x] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- EXECUTION TIME:
1.04106
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  1
posicao y:  1
moedas:  21
life:  -50
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  1
posicao y:  0
moedas:  24
life:  -25
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  0
posicao y:  0
moedas:  34
life:  -40
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:10:10) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 0

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moedas = moedas + 1
			
	if	(tabuleiro[y,x] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:12:15) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 0

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > colunas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > linhas):
		x = px
		
	if (tabuleiro[x,y] ==  33):
			y = py
			x = px
			
	if (tabuleiro[x,y] == 11 ):
		moedas = moedas + 1
			
	if	(tabuleiro[x,y] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:12:21) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 0

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > colunas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > linhas):
		x = px
		
	if (tabuleiro[x,y] ==  33):
			y = py
			x = px
			
	if (tabuleiro[x,y] == 11 ):
		moedas = moedas + 1
			
	if	(tabuleiro[x,y] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- EXECUTION TIME:
1.09227
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  1
posicao y:  1
moedas:  28
life:  -45
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  1
posicao y:  0
moedas:  24
life:  -50
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  0
posicao y:  0
moedas:  28
life:  -70
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:12:36) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 0

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > colunas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > linhas):
		x = px
		
	if (tabuleiro[x,y] ==  33):
			y = py
			x = px
			
	if (tabuleiro[x,y] == 11 ):
		moedas = moedas + 1
			
	if	(tabuleiro[x,y] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- EXECUTION TIME:
0.994941
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  1
posicao y:  1
moedas:  28
life:  -45
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  1
posicao y:  0
moedas:  24
life:  -50
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  0
posicao y:  0
moedas:  28
life:  -70
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:12:37) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 0

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > colunas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > linhas):
		x = px
		
	if (tabuleiro[x,y] ==  33):
			y = py
			x = px
			
	if (tabuleiro[x,y] == 11 ):
		moedas = moedas + 1
			
	if	(tabuleiro[x,y] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:15:54) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 0

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moedas = moedas + 1
		tabuleiro[y,x] = 0
	if	(tabuleiro[x,y] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- EXECUTION TIME:
0.915115
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1280/main.py", line 48, in <module>
    if	(tabuleiro[x,y] == 22):
IndexError: index 11 is out of bounds for axis 0 with size 11

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:17:27) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 100

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moedas = moedas + 1
		tabuleiro[y,x] = 0
	if	(tabuleiro[x,y] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- EXECUTION TIME:
0.746635
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1280/main.py", line 48, in <module>
    if	(tabuleiro[x,y] == 22):
IndexError: index 11 is out of bounds for axis 0 with size 11

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:17:38) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 100

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moedas = moedas + 1
		tabuleiro[y,x] = 0
	if	(tabuleiro[x,y] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- EXECUTION TIME:
1.13788
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1280/main.py", line 48, in <module>
    if	(tabuleiro[x,y] == 22):
IndexError: index 11 is out of bounds for axis 0 with size 11

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:17:39) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 100

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moedas = moedas + 1
		tabuleiro[y,x] = 0
	if	(tabuleiro[x,y] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:17:57) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 100

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moedas = moedas + 1
		tabuleiro[y,x] = 0
	if	(tabuleiro[x,y] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:18:47) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 100

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moedas = moedas + 1
		tabuleiro[y,x] = 0
	if	(tabuleiro[x,y] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:19:53) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 100

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moedas = moedas + 1
		tabuleiro[y,x] = 0
	if	(tabuleiro[x,y] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- EXECUTION TIME:
0.857278
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1280/main.py", line 48, in <module>
    if	(tabuleiro[x,y] == 22):
IndexError: index 11 is out of bounds for axis 0 with size 11

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:20:01) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 100

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moedas = moedas + 1
		tabuleiro[y,x] = 0
	if	(tabuleiro[x,y] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:21:48) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 100

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moedas = moedas + 1
		tabuleiro[y,x] = 0
	elif	(tabuleiro[x,y] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- EXECUTION TIME:
0.984838
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1280/main.py", line 48, in <module>
    elif	(tabuleiro[x,y] == 22):
IndexError: index 11 is out of bounds for axis 0 with size 11

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:26:51) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 100

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moedas = moedas + 1
		tabuleiro[y,x] = 0
	elif	(tabuleiro[y,x] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- EXECUTION TIME:
1.10023
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  1
posicao y:  1
moedas:  9
life:  50
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  1
posicao y:  0
moedas:  8
life:  75
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  0
posicao y:  0
moedas:  11
life:  60
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:27:12) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 100

px = 0
py = 0

for i in movimentos:
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moedas = moedas + 1
		tabuleiro[y,x] = 0
	elif	(tabuleiro[y,x] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:55:44) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 100

px = 0
py = 0

for i in movimentos:
	px = x
	py = y
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moedas = moedas + 1
		tabuleiro[y,x] = 0
	elif	(tabuleiro[y,x] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- EXECUTION TIME:
1.15663
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
Digite o tabuleiro: movimentos: posicao x:  11
posicao y:  10
moedas:  13
life:  75
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
Digite o tabuleiro: movimentos: posicao x:  5
posicao y:  3
moedas:  20
life:  75
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
Digite o tabuleiro: movimentos: posicao x:  6
posicao y:  2
moedas:  13
life:  55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:56:14) 
-- CODE:
from numpy import*

tabuleiro = array(eval(input("Digite o tabuleiro: ")))

movimentos = input("movimentos: ")

linhas = shape(tabuleiro)[0] - 1
colunas = shape(tabuleiro)[1] - 1

x = 0
y = 0

moedas = 0
life = 100

px = 0
py = 0

for i in movimentos:
	px = x
	py = y
	if	(i == "A"):
		x = x - 1
	elif(i == "D"):
		x = x + 1
	elif(i == "W"):
		y = y - 1
	elif(i == "S"):
		y = y + 1
		
	if (y < 0):
		y = py
	
	if(y > linhas):
		y = py
	
	if(x < 0):
		x = px
	
	if (x > colunas):
		x = px
		
	if (tabuleiro[y,x] ==  33):
			y = py
			x = px
			
	if (tabuleiro[y,x] == 11 ):
		moedas = moedas + 1
		tabuleiro[y,x] = 0
	elif	(tabuleiro[y,x] == 22):
		life = life - 5
		
print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moedas)
print("life: ", life)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:59:54) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))
linhas = shape(tabuleiro)[0] -1
colunas = shape(tabuleiro)[1] -1

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
x = 0
y = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Variáveis para guardar a posição anterior
pos_ant_x = 0
pos_ant_y = 0

# Analise da jogada
for letra in mov:

# Guardar o movimento
	pos_ant_x = x
	pos_ant_y = y

# Atualizar o movimento
	if letra == 'A':	
		x = x - 1

	elif letra == 'D':
		x = x + 1

	elif letra == 'W':	
		y = y - 1
		
	elif letra == 'S':
		y = y + 1
		
# Verificar se o movimento é válido, caso não seja ele permanecerá na posição anterior
	if y < 0:
		y = pos_ant_y
		
	if y > linhas:
		y = pos_ant_y
		
	if x > colunas:
		x = pos_ant_x
	
	if x < 0:
		x = pos_ant_x


# Evento
	# Verificar se foi para o muro
	if tabuleiro[y,x] == 33:
		y = pos_ant_y
		x = pos_ant_x
	# Moeda
	if tabuleiro[y,x] == 11:
		moeda = moeda + 1
	  # Apaga moeda do tabuleiro
		tabuleiro[y,x] = 0
	# Zumbi
	elif tabuleiro[y,x] == 22:
		life = life - 5


print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moeda)
print("life: ", life)	
-- EXECUTION TIME:
1.20418
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
Tabuleiro: Movimentos: posicao x:  11
posicao y:  10
moedas:  13
life:  75
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
Tabuleiro: Movimentos: posicao x:  5
posicao y:  3
moedas:  20
life:  75
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
Tabuleiro: Movimentos: posicao x:  6
posicao y:  2
moedas:  13
life:  55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:00:03) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))
linhas = shape(tabuleiro)[0] -1
colunas = shape(tabuleiro)[1] -1

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
x = 0
y = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Variáveis para guardar a posição anterior
pos_ant_x = 0
pos_ant_y = 0

# Analise da jogada
for letra in mov:

# Guardar o movimento
	pos_ant_x = x
	pos_ant_y = y

# Atualizar o movimento
	if letra == 'A':	
		x = x - 1

	elif letra == 'D':
		x = x + 1

	elif letra == 'W':	
		y = y - 1
		
	elif letra == 'S':
		y = y + 1
		
# Verificar se o movimento é válido, caso não seja ele permanecerá na posição anterior
	if y < 0:
		y = pos_ant_y
		
	if y > linhas:
		y = pos_ant_y
		
	if x > colunas:
		x = pos_ant_x
	
	if x < 0:
		x = pos_ant_x


# Evento
	# Verificar se foi para o muro
	if tabuleiro[y,x] == 33:
		y = pos_ant_y
		x = pos_ant_x
	# Moeda
	if tabuleiro[y,x] == 11:
		moeda = moeda + 1
	  # Apaga moeda do tabuleiro
		tabuleiro[y,x] = 0
	# Zumbi
	elif tabuleiro[y,x] == 22:
		life = life - 5


print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moeda)
print("life: ", life)	
-- EXECUTION TIME:
1.02281
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
Tabuleiro: Movimentos: posicao x:  5
posicao y:  3
moedas:  20
life:  75
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
Tabuleiro: Movimentos: posicao x:  6
posicao y:  2
moedas:  13
life:  55
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:00:10) 
-- CODE:
#######
# Lab 07 – Exercicio 09
# @author: IComp / UFAM
# AVENTURAS COM MOEDAS E ZUMBIS

from numpy import *

# Leitura do tabuleiro
tabuleiro = array(eval(input("Tabuleiro: ")))
linhas = shape(tabuleiro)[0] -1
colunas = shape(tabuleiro)[1] -1

# Sequencia de movimentos do personagem
mov = input("Movimentos: ")

# Posicao inicial do personagem
x = 0
y = 0

# Contadores de atributos do personagem
moeda = 0
life = 100

# Variáveis para guardar a posição anterior
pos_ant_x = 0
pos_ant_y = 0

# Analise da jogada
for letra in mov:

# Guardar o movimento
	pos_ant_x = x
	pos_ant_y = y

# Atualizar o movimento
	if letra == 'A':	
		x = x - 1

	elif letra == 'D':
		x = x + 1

	elif letra == 'W':	
		y = y - 1
		
	elif letra == 'S':
		y = y + 1
		
# Verificar se o movimento é válido, caso não seja ele permanecerá na posição anterior
	if y < 0:
		y = pos_ant_y
		
	if y > linhas:
		y = pos_ant_y
		
	if x > colunas:
		x = pos_ant_x
	
	if x < 0:
		x = pos_ant_x


# Evento
	# Verificar se foi para o muro
	if tabuleiro[y,x] == 33:
		y = pos_ant_y
		x = pos_ant_x
	# Moeda
	if tabuleiro[y,x] == 11:
		moeda = moeda + 1
	  # Apaga moeda do tabuleiro
		tabuleiro[y,x] = 0
	# Zumbi
	elif tabuleiro[y,x] == 22:
		life = life - 5


print("posicao x: ", x)
print("posicao y: ", y)
print("moedas: ", moeda)
print("life: ", life)	
-- EXECUTION TIME:
1.29007
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
